dodanie Spring Security i poprawa testow integracyjnych v2